--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "clean": "rimraf dist/*",
+    "build": "npm run clean && webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@types/node": "^9.4.0",
     "@types/webpack": "^3.8.5",
+    "rimraf": "^2.6.2",
     "ts-node": "^4.1.0",
     "tsconfig-paths": "^3.1.1",
     "typescript": "^2.7.1",
