--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "webpack",
+    "build": "NODE_ENV=production npm run clean && webpack --env dist",
     "clean": "rimraf dist/*",
-    "build": "npm run clean && webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,8 +21,12 @@
   },
   "homepage": "https://github.com/murongzi/kakarotto#readme",
   "devDependencies": {
+    "@types/html-webpack-plugin": "^2.30.1",
     "@types/node": "^9.4.0",
     "@types/webpack": "^3.8.5",
+    "awesome-typescript-loader": "^3.4.1",
+    "css-loader": "^0.28.9",
+    "html-webpack-plugin": "^2.30.1",
     "rimraf": "^2.6.2",
     "ts-node": "^4.1.0",
     "tsconfig-paths": "^3.1.1",
