--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,19 @@
 {
     "compilerOptions": {
+        "removeComments": true,
         "outDir": "./dist/",
         "sourceMap": true,
-        "noImplicitAny": true,
         "module": "commonjs",
         "target": "es5",
-        "jsx": "react",
-        "types": [
-            "webpack-env",
-            "node"
-        ]
-    }
+        "allowJs": true,
+        "skipLibCheck": true,
+        "allowSyntheticDefaultImports": true,
+        "baseUrl": "./src/"
+    },
+    "typeRoots": [
+        "./node_modules/@types"
+    ],
+    "exclude": [
+        "node_modules"
+    ]
 }
