--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,12 +8,19 @@
         "allowJs": true,
         "skipLibCheck": true,
         "allowSyntheticDefaultImports": true,
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "suppressImplicitAnyIndexErrors": true,
+        "lib": [ "es2017", "dom"],
         "baseUrl": "./src/"
     },
     "typeRoots": [
         "./node_modules/@types"
     ],
     "exclude": [
-        "node_modules"
-    ]
+        "node_modules",
+        "buildAOT",
+        "temp"
+    ],
+    "angularCompilerOptions": {}
 }
