--- a/package.json
+++ b/package.json
@@ -20,13 +20,31 @@
     "url": "https://github.com/murongzi/kakarotto/issues"
   },
   "homepage": "https://github.com/murongzi/kakarotto#readme",
+  "dependencies": {
+    "@angular/common": "^5.2.4",
+    "@angular/compiler": "^5.2.4",
+    "@angular/core": "^5.2.4",
+    "@angular/forms": "^5.2.4",
+    "@angular/http": "^5.2.4",
+    "@angular/platform-browser": "^5.2.4",
+    "@angular/platform-browser-dynamic": "^5.2.4",
+    "@angular/router": "^5.2.4",
+    "core-js": "^2.5.3",
+    "rxjs": "^5.5.6",
+    "zone.js": "^0.8.20"
+  },
   "devDependencies": {
+    "@angular-devkit/build-optimizer": "^0.3.1",
+    "@angular/compiler-cli": "^5.2.4",
+    "@ngtools/webpack": "^1.9.8",
     "@types/html-webpack-plugin": "^2.30.1",
     "@types/node": "^9.4.0",
     "@types/webpack": "^3.8.5",
     "awesome-typescript-loader": "^3.4.1",
     "css-loader": "^0.28.9",
     "html-webpack-plugin": "^2.30.1",
+    "progress-bar-webpack-plugin": "^1.10.0",
+    "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
     "ts-node": "^4.1.0",
     "tsconfig-paths": "^3.1.1",
