--- a/package.json
+++ b/package.json
@@ -1,54 +1,34 @@
 {
-  "name": "kakarotto",
+  "name": "test-guide",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack",
-    "build": "NODE_ENV=production npm run clean && webpack --env dist",
-    "clean": "rimraf dist/*",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/murongzi/kakarotto.git"
+    "build": "npm run clean && webpack",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rimraf -rf ./dist/"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/murongzi/kakarotto/issues"
-  },
-  "homepage": "https://github.com/murongzi/kakarotto#readme",
   "dependencies": {
-    "@angular/common": "^5.2.4",
-    "@angular/compiler": "^5.2.4",
-    "@angular/core": "^5.2.4",
-    "@angular/forms": "^5.2.4",
-    "@angular/http": "^5.2.4",
-    "@angular/platform-browser": "^5.2.4",
-    "@angular/platform-browser-dynamic": "^5.2.4",
-    "@angular/router": "^5.2.4",
-    "core-js": "^2.5.3",
-    "rxjs": "^5.5.6",
-    "zone.js": "^0.8.20"
+    "@types/react": "^16.3.12",
+    "@types/react-dom": "^16.0.5",
+    "babel-preset-stage-1": "^6.24.1",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-optimizer": "^0.3.1",
-    "@angular/compiler-cli": "^5.2.4",
-    "@ngtools/webpack": "^1.9.8",
-    "@types/html-webpack-plugin": "^2.30.1",
-    "@types/node": "^9.4.0",
-    "@types/webpack": "^3.8.5",
     "awesome-typescript-loader": "^3.4.1",
-    "css-loader": "^0.28.9",
-    "html-webpack-plugin": "^2.30.1",
-    "progress-bar-webpack-plugin": "^1.10.0",
-    "raw-loader": "^0.5.1",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "rimraf": "^2.6.2",
-    "ts-node": "^4.1.0",
-    "tsconfig-paths": "^3.1.1",
+    "source-map-loader": "^0.2.3",
     "typescript": "^2.7.1",
-    "webpack": "^3.10.0"
+    "webpack": "^3.5.6"
   }
 }
