--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,24 @@
 {
     "compilerOptions": {
-        "removeComments": true,
         "outDir": "./dist/",
-        "sourceMap": true,
-        "module": "commonjs",
-        "target": "es5",
+        "charset": "utf8",
         "allowJs": true,
-        "skipLibCheck": true,
-        "allowSyntheticDefaultImports": true,
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
-        "suppressImplicitAnyIndexErrors": true,
-        "lib": [ "es2017", "dom"],
-        "baseUrl": "./src/"
+        "checkJs": true,
+        "target": "es2016",
+        "baseUrl": ".",
+        "jsx": "react",
+        "module": "ES2015",
+        "moduleResolution": "node"
     },
+    "lib": [
+        "DOM",
+        "ES6"
+    ],
     "typeRoots": [
         "./node_modules/@types"
     ],
-    "exclude": [
-        "node_modules",
-        "buildAOT",
-        "temp"
-    ],
-    "angularCompilerOptions": {}
+    "include": [
+        "./src/**/*.ts",
+        "./src/**/*.tsx"
+    ]
 }
