--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "html-webpack-plugin": "^3.2.0",
     "rimraf": "^2.6.2",
     "source-map-loader": "^0.2.3",
     "typescript": "^2.7.1",
