--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
   "devDependencies": {
     "awesome-typescript-loader": "^3.4.1",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "eslint": "^4.19.1",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-react": "^7.7.0",
     "html-webpack-plugin": "^3.2.0",
     "rimraf": "^2.6.2",
     "source-map-loader": "^0.2.3",
