--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npm run clean && webpack",
+    "start": "webpack -w",
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf -rf ./dist/"
   },
@@ -15,8 +16,16 @@
     "@types/react": "^16.3.12",
     "@types/react-dom": "^16.0.5",
     "babel-preset-stage-1": "^6.24.1",
+    "css-loader": "^0.28.11",
+    "postcss": "^6.0.21",
+    "postcss-loader": "^2.1.4",
     "react": "^16.3.1",
-    "react-dom": "^16.3.1"
+    "react-dom": "^16.3.1",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "sass-loader": "^7.0.1",
+    "sass-resources-loader": "^1.3.3",
+    "style-loader": "^0.21.0"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^3.4.1",
