--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,12 @@
         "baseUrl": ".",
         "jsx": "react",
         "module": "ES2015",
-        "moduleResolution": "node"
+        "moduleResolution": "node",
+        "sourceMap": true,
+
+        "experimentalDecorators": true,
+        "removeComments": true,
+        "skipLibCheck": true
     },
     "lib": [
         "DOM",
