--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "eslint": "^4.19.1",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-typescript": "^0.11.0",
     "html-webpack-plugin": "^3.2.0",
     "rimraf": "^2.6.2",
     "source-map-loader": "^0.2.3",
     "typescript": "^2.7.1",
+    "typescript-eslint-parser": "^15.0.0",
     "webpack": "^3.5.6"
   }
 }
