--- a/package.json
+++ b/package.json
@@ -15,19 +15,13 @@
   "dependencies": {
     "@types/react": "^16.3.12",
     "@types/react-dom": "^16.0.5",
-    "babel-preset-stage-1": "^6.24.1",
-    "css-loader": "^0.28.11",
-    "postcss": "^6.0.21",
-    "postcss-loader": "^2.1.4",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "sass-loader": "^7.0.1",
-    "sass-resources-loader": "^1.3.3",
-    "style-loader": "^0.21.0"
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
+    "autoprefixer": "^8.3.0",
     "awesome-typescript-loader": "^3.4.1",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.3",
@@ -36,15 +30,24 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-typescript": "^0.11.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.9.0",
+    "postcss": "^6.0.21",
+    "postcss-loader": "^2.1.4",
     "rimraf": "^2.6.2",
+    "sass-loader": "^7.0.1",
+    "sass-resources-loader": "^1.3.3",
     "source-map-loader": "^0.2.3",
+    "style-loader": "^0.21.0",
     "typescript": "^2.8.3",
     "typescript-eslint-parser": "^15.0.0",
-    "webpack": "^3.5.6"
+    "webpack": "^3.11.0"
   }
 }
