--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npm run clean && webpack",
+    "build": "npm run clean && webpack --display-error-details",
     "start": "webpack -w",
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf -rf ./dist/"
