--- a/package.json
+++ b/package.json
@@ -1,43 +1,35 @@
 {
-  "name": "kakarotto",
+  "name": "react-offical-todos",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npm run clean && webpack",
-    "clean": "rimraf dist/*",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/murongzi/kakarotto.git"
+    "start": "webpack -w",
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/murongzi/kakarotto/issues"
-  },
-  "homepage": "https://github.com/murongzi/kakarotto#readme",
-  "devDependencies": {
-    "autoprefixer": "^7.2.5",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
-    "css-loader": "^0.28.9",
-    "cssnano": "^3.10.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "node-sass": "^4.7.2",
-    "postcss-loader": "^2.1.0",
-    "rimraf": "^2.6.2",
-    "sass-loader": "^6.0.6",
-    "sass-resources-loader": "^1.3.2",
-    "style-loader": "^0.20.1",
-    "stylelint": "^8.4.0",
-    "webpack": "^3.10.0"
-  },
   "dependencies": {
-    "bootstrap": "^4.0.0"
+    "events": "^2.0.0",
+    "prop-types": "^15.6.1",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-jest": "^22.4.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^22.4.3",
+    "react-addons-test-utils": "^15.6.2",
+    "webpack": "^3.11.0"
   }
 }
