--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,7 @@
     "no-trailing-spaces": [1, { "skipBlankLines": true }],
     "no-unreachable": 1,
     "no-alert": 1,
+    "no-debugger": 0,
     "react/jsx-uses-react": 1,
     "react/jsx-uses-vars": 1,
     "react/react-in-jsx-scope": 1,
