--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^8.3.0",
